change icon color

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav {
 
 
 nav svg {
-   color: #c8c9fc;
+   color: #9394d6;
    /* background-color: red; */
    /* fill: none; */
    transition: .3s ease all;
