--- a/styles/kerajinan.css
+++ b/styles/kerajinan.css
@@ -1,13 +1,13 @@
 /* searchbarKerajinan */
 .searchBarKerajinan {
-   /* border: 1px solid red; */
-   position: fixed;
-   top: 0;
-   right: 20px;
-   left: 20px;;
-   margin: 20px 0;
+	/* border: 1px solid red; */
+	position: fixed;
+	top: 0;
+	right: 20px;
+	left: 20px;
+	margin: 20px 0;
+	z-index: 2;
 }
-
 
 .searchBarKerajinan input {
 	display: block;
@@ -17,103 +17,146 @@
 	height: 45px;
 	border-radius: 20px;
 	border: 1px solid white;
-   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.05);
-   /* box-shadow: 2px 3px 50px rgba(0, 0, 0, 0.1); */
+	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.05);
+	/* box-shadow: 2px 3px 50px rgba(0, 0, 0, 0.1); */
 	padding: 20px;
 	box-sizing: border-box;
 }
 
 input:focus {
-   outline: none;
-   border: 0;
+	outline: none;
+	border: 0;
 }
 
 .searchBarKerajinan input::-webkit-input-placeholder {
 	/* Chrome/Opera/Safari */
-   color: #4649a0;
-   font-weight: 500;
-   font-family: 'Montserrat', sans-serif;
+	color: #4649a0;
+	font-weight: 500;
+	font-family: 'Montserrat', sans-serif;
 }
 .searchBarKerajinan input::-moz-placeholder {
 	/* Firefox 19+ */
-   color: #4649a0;
-   font-weight: 500;
-   font-family: 'Montserrat', sans-serif;
+	color: #4649a0;
+	font-weight: 500;
+	font-family: 'Montserrat', sans-serif;
 }
 .searchBarKerajinan input:-ms-input-placeholder {
 	/* IE 10+ */
-   color: #4649a0;
-   font-weight: 500;
-   font-family: 'Montserrat', sans-serif;
+	color: #4649a0;
+	font-weight: 500;
+	font-family: 'Montserrat', sans-serif;
 }
 .searchBarKerajinan input:-moz-placeholder {
 	/* Firefox 18- */
-   color: #4649a0;
-   font-weight: 500;
-   font-family: 'Montserrat', sans-serif;
+	color: #4649a0;
+	font-weight: 500;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .searchBarKerajinan .searchButton {
-   background-color: #4649a0;
-   display: inline-block;
-   width: 36px;
-   height: 36px;
-   border-radius: 50%;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   position: absolute;
-   top: 4px;
-   right: 11px;
-   bottom: 5px;
-   cursor: pointer;
-   transition: .5s ease all;
+	background-color: #4649a0;
+	display: inline-block;
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: 4px;
+	right: 11px;
+	bottom: 5px;
+	cursor: pointer;
+	transition: 0.5s ease all;
 }
 
 .searchButton:hover {
-   box-shadow: 2px 3px 5px rgba(227, 228, 247, 10);
-   background-color: #393c85;
+	box-shadow: 2px 3px 5px rgba(227, 228, 247, 10);
+	background-color: #393c85;
 }
 
 .searchButton svg {
-   color: white;
+	color: white;
 }
-
 
 /* Card items */
 
 .cardItemsContainer {
-   /* background-color: #6666; */
-   /* width: 100%; */
-   /* height: 100px; */
-   margin: 100px  0;
-   display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-   gap: 30px;
-   color: #4649A0;
+	/* background-color: #6666; */
+	/* width: 100%; */
+	/* height: 100px; */
+	margin: 100px 0;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(140px, 200px));
+	gap: 30px;
+	color: #4649a0;
 }
 
 .cardItems img {
-   width: 100%;
-   max-width: 150px;
-   margin: 0 auto;
+	width: 100%;
+	/* max-width: 100px; */
+	/* height: 100%; */
+	margin: 0 auto;
 }
 
 .cardItems {
-   border-radius: 10px;
-   background-color: #F8F8F8;
-   padding: 25px;
-   text-align: center;
-   height: 200px;
-   cursor: pointer;
-   transition: .2s ease all;
+	border-radius: 10px;
+	background-color: #f8f8f8;
+	padding: 25px;
+	text-align: center;
+	height: 200px;
+	cursor: pointer;
+	transition: 0.2s ease all;
+	/* border: 1px solid red; */
+	display: grid;
+	grid-template-rows: 140px 80px;
+	align-items: center;
+	position: relative;
 }
 
 .cardItems:hover {
-   box-shadow: 2px 2px 20px rgb(227, 228, 247);
+	box-shadow: 2px 2px 20px rgb(227, 228, 247);
 }
 
 .cardItems .itemName {
-   margin-top: 10px;
-   font-weight: 500;
+	margin-bottom: 5px;
+	font-weight: 500;
+}
+
+.cardItems .itemPrice {
+	font-weight: 700;
+}
+
+.cardItems svg {
+	position: absolute;
+	top: 12px;
+	right: 12px;
+	fill: #a8a8a8;
+	cursor: pointer;
+	transition: 0.5s ease all;
+}
+
+.cardItems svg.fav {
+   fill: #4649a0;
+   animation: love-animation 1s ease-in-out forwards;
+	/* top: 8px;
+	transform: scale(1.2); */
+}
+
+@keyframes love-animation {
+	0% {
+		top: 12px;
+		right: 12px;
+	}
+
+	50% {
+		top: 8px;
+		transform: scale(1.2);
+   }
+
+   100% {
+      top: 12px;
+      right: 12px;
+      transform: scale(1);
+   }
 }
