--- a/styles/kerajinan.css
+++ b/styles/kerajinan.css
@@ -87,14 +87,14 @@ input:focus {
 	/* height: 100px; */
 	margin: 100px 0;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(140px, 200px));
+	grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
 	gap: 30px;
 	color: #4649a0;
 }
 
 .cardItems img {
 	width: 100%;
-	/* max-width: 100px; */
+	max-width: 150px;
 	/* height: 100%; */
 	margin: 0 auto;
 }
