--- a/styles/kerajinan.css
+++ b/styles/kerajinan.css
@@ -99,23 +99,28 @@ input:focus {
 	margin: 0 auto;
 }
 
-.cardItems {
+.cards {
 	border-radius: 10px;
 	background-color: #f8f8f8;
 	padding: 25px;
 	text-align: center;
 	height: 200px;
 	cursor: pointer;
-	transition: 0.2s ease all;
+	transition: 0.3s ease all;
 	/* border: 1px solid red; */
-	display: grid;
-	grid-template-rows: 140px 80px;
-	align-items: center;
-	position: relative;
+   position: relative;
+   z-index: 0;
 }
 
-.cardItems:hover {
+.cards:hover {
 	box-shadow: 2px 2px 20px rgb(227, 228, 247);
+}
+
+.cardItems {
+   display: grid;
+	grid-template-rows: 140px 80px;
+   align-items: center;
+   /* background-color: red; */
 }
 
 .cardItems .itemName {
@@ -127,16 +132,17 @@ input:focus {
 	font-weight: 700;
 }
 
-.cardItems svg {
+.cards svg {
 	position: absolute;
 	top: 12px;
 	right: 12px;
 	fill: #a8a8a8;
 	cursor: pointer;
-	transition: 0.5s ease all;
+   transition: 0.5s ease all;
+   z-index: 1;
 }
 
-.cardItems svg.fav {
+.cards svg.fav {
    fill: #4649a0;
    animation: love-animation 1s ease-in-out forwards;
 	/* top: 8px;
