cart page, but stuck wanna try indexDB

--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,17 +1,21 @@
 .detail {
-   color: #4649a0;
+	color: #4649a0;
 }
 
 .pageId {
 	display: grid;
 	grid-template-columns: repeat(3, max-content);
 	/* border: 1px solid red; */
-	
+
 	justify-content: space-between;
 }
 
+.pageId div {
+   color: white;
+   width: 25px;
+}
 .pageId svg {
-   cursor: pointer;
+	cursor: pointer;
 }
 
 .itemDetailEl {
@@ -22,8 +26,8 @@
 		'detailNamePrice'
 		'detailDesc'
 		'detailRating'
-      'detailAddToCart';
-   gap: 15px;
+		'detailAddToCart';
+	gap: 15px;
 }
 
 .itemDetailEl img {
@@ -41,96 +45,112 @@
 }
 
 .itemDetailEl .detailNamePrice {
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .itemDetailEl .detailNamePrice h2 {
-   font-weight: 600;
+	font-weight: 600;
 }
 
 .itemDetailEl .detailDesc p {
-   font-weight: 300;
-   text-align: justify;
+	font-weight: 300;
+	text-align: justify;
 }
 
 .itemDetailEl .detailRating {
-   display: grid;
-   grid-template-columns: repeat(6, max-content);
-   /* border: 1px solid red; */
-   gap: 5px;
+	display: grid;
+	grid-template-columns: repeat(6, max-content);
+	/* border: 1px solid red; */
+	gap: 5px;
 }
 
 .itemDetailEl .detailRating img {
-   width: 20px;
-   color: blue;
-   fill: blue;
+	width: 20px;
+	color: blue;
+	fill: blue;
 }
 
 .itemDetailEl .detailAddToCart {
-   display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-   /* border: 1px solid red; */
-   align-items: center;
-   justify-items: center;
-   border-radius: 5px;
-   margin: 10px 0;
-   gap: 5px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+	/* border: 1px solid red; */
+	align-items: center;
+	justify-items: center;
+	border-radius: 5px;
+	margin: 10px 0;
+	gap: 5px;
 }
 
 .detailAddToCart .quantity input {
-   width: 20px;
-   padding: 5px;
+	width: 20px;
+	padding: 5px;
    margin: 0 10px;
+   text-align: center;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+	-moz-appearance: textfield;
 }
 
 .detailAddToCart .quantity {
-   display: flex;
-   /* border: 1px solid red; */
-   /* width: 100%; */
-   justify-content: center;
-   align-items: center;
+	display: flex;
+	/* border: 1px solid red; */
+	/* width: 100%; */
+	justify-content: center;
+	align-items: center;
 }
 
 .detailAddToCart .quantity .qButton {
-   color: white;
-   background-color: #4649a0;
-   text-align: center;
-   width: 30px;
-   height: 30px;
-   border-radius: 50%;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.1);
-   transition: .3s ease-in-out all;
-   cursor: pointer;
+	color: white;
+	background-color: #4649a0;
+	text-align: center;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.1);
+	transition: 0.3s ease-in-out all;
+	cursor: pointer;
 }
 
-.detailAddToCart .quantity .qButton h2{
-   font-weight: 400;
+.detailAddToCart .quantity .qButton h2 {
+	font-weight: 400;
 }
 
 .detailAddToCart .addToCartButton {
-   background-color: #4649a0;
-   color: white;
-   padding: 10px;
-   border-radius: 5px;
-   cursor: pointer;
-   text-transform: uppercase;
-   font-size: 12px;
-   display: flex;
-   align-items: center;
-   width: 80%;
-   justify-content: center;
-   transition: .3s ease-in-out all;
+	background-color: #4649a0;
+	color: white;
+	padding: 12px;
+	border-radius: 5px;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-size: 12px;
+	display: flex;
+	align-items: center;
+	width: 80%;
+	justify-content: center;
+   transition: 0.3s ease-in-out all;
+   
 }
 
-.detailAddToCart .addToCartButton:hover, .detailAddToCart .quantity .qButton:hover  {
-   background-color: #383a80;
+.detailAddToCart .addToCartButton:hover,
+.detailAddToCart .quantity .qButton:hover {
+	background-color: #383a80;
 }
 
 .addToCartButton p {
    margin-right: 5px;
+   font-weight: 600;
 }
