--- a/styles/cart.css
+++ b/styles/cart.css
@@ -8,20 +8,20 @@
 .cartItem {
    display: grid;
    /* grid-template-columns: 20% 60% 20%; */
-   grid-template-columns: 70px auto 80px;
+   grid-template-columns: 70px auto 90px;
    grid-template-rows: 70px;
    /* border: 1px solid red; */
-   margin: 20px 0;
-   padding: 10px;
+   margin: 20px 0 0 0;
+   padding: 10px 20px;
    background-color: #E3E4F7;
    border-radius: 10px;
-   justify-items: center;
+   /* justify-items: center; */
    align-items: center;
    max-width: 320px;
    width: 100%;
    align-content: center;
    /* justify-content: center; */
-   gap: 5px;
+   /* gap: 10px; */
    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.05);
 }
 
@@ -36,12 +36,18 @@
    align-items: center;
    /* width: 100%; */
    /* height: 100%; */
-   background-color: white;
+   background-color: #F8F8F8;
    border-radius: 10px;
    box-sizing: border-box;
    padding: 5px;
    width: 66px;
    height: 66px;
+   /* margin-right: ; */
+}
+
+.cartItemNamePrice {
+   /* border: 1px solid red; */
+   padding-left: 20px;
 }
 
 .cartItemNamePrice h2{
@@ -102,4 +108,9 @@ input[type=checkbox] {
 
 .cartCheck .quantity .qButton h2 {
 	font-weight: 400;
+}
+
+.ifCartKosong {
+   /* border: 1px solid red; */
+   margin-top: 30px;
 }
