--- a/styles/detail.css
+++ b/styles/detail.css
@@ -4,18 +4,40 @@
 
 .pageId {
 	display: grid;
-	grid-template-columns: repeat(3, max-content);
+	/* grid-template-columns: repeat(3, max-content); */
 	/* border: 1px solid red; */
+   grid-template-areas: 
+   'arrow text icon'
+   ;
+	/* justify-content: space-between; */
+}
 
-	justify-content: space-between;
+.pageId svg {
+   grid-area: arrow;
 }
 
 .pageId div {
-	color: white;
-	width: 25px;
+   /* color: black; */
+   /* border: 1px solid red; */
+   width: 20px;
+   justify-self: end;
+   /* align-self: flex-end; */
+   grid-area: icon;
 }
 .pageId svg {
 	cursor: pointer;
+}
+
+.pageId h3 {
+   /* display: grid; */
+   /* border: 1px solid red; */
+   /* justify-content: center; */
+   justify-self: center;
+
+   /* align-self: center; */
+   grid-area: text;
+   width: 100%;
+   text-align: center;
 }
 
 .itemDetailEl {
@@ -56,7 +78,7 @@
 
 .itemDetailEl .detailDesc p {
 	font-weight: 300;
-	text-align: justify;
+	/* text-align: justify; */
 }
 
 .itemDetailEl .detailRating {
@@ -156,14 +178,16 @@ input[type='number'] {
 
 .addToNotifContainer {
 	background-color: white;
-	/* margin: 100px; */
-	/* width: 300px; */
-	position: fixed;
-	top: -130px;
-	left: 50px;
-	right: 50px;
+   /* margin: 100px; */
+   width: 100%;
+   max-width: 220px;
+   min-width: 200px;
+   position: fixed;
+   top: 4.5rem;
+	left: 50%;
+	transform: translateX(-50%) translateY(-500%);
 	display: grid;
-	grid-template-columns: 60px 200px;
+	grid-template-columns: 27% auto;
 	padding: 10px;
 	border-radius: 10px;
 	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -176,9 +200,11 @@ input[type='number'] {
 }
 
 .addToNotifContainer.active {
-   top: 30px;
-	left: 50px;
-	right: 50px;
+   /* top: 30px; */
+	/* left: 50px; */
+   /* right: 50px; */
+   transform: translateX(-50%) translateY(0);
+   overflow: hidden;
 }
 
 .addToNotifContainer img {
@@ -186,14 +212,19 @@ input[type='number'] {
 	/* width: 50px; */
 }
 
+.textNotif {
+   /* width: 90%; */
+   /* border: 1px solid red; */
+}
+
 .textNotif h3 {
 	/* background-color: red; */
-	font-size: 15px;
+	font-size: 13px;
 	margin-bottom: 5px;
 }
 
 .textNotif p {
-	font-size: 12px;
+	font-size: 11px;
 }
 
 
