--- a/styles/kerajinan.css
+++ b/styles/kerajinan.css
@@ -85,7 +85,7 @@ input:focus {
 	/* background-color: #6666; */
 	/* width: 100%; */
 	/* height: 100px; */
-	margin: 100px 0;
+	margin: 100px 0 65px 0;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
 	gap: 30px;
