--- a/styles/cart.css
+++ b/styles/cart.css
@@ -1,9 +1,17 @@
+.cartEl {
+   position: relative;
+   /* border: 1px solid blue; */
+   /* height: 90vh; */
+}
+
 .cartContainer {
    display: grid;
    /* justify-content: center; */
    /* align-content: center; */
    justify-items: center;
-   margin-bottom: 70px;
+   /* margin-bottom: 70px; */
+   /* border: 1px solid red; */
+   /* height: 500px; */
 }
 
 .cartItem {
@@ -123,4 +131,65 @@ input[type=checkbox] {
 .ifCartKosong {
    /* border: 1px solid red; */
    margin-top: 30px;
+}
+
+
+.cartTotalPayment {
+   display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+	/* border: 1px solid red; */
+	align-items: center;
+	justify-items: center;
+	border-radius: 5px;
+	margin: 20px 0 65px 0;
+   gap: 5px;
+   /* position: fixed;
+   bottom: 40px;
+   left: 0;
+   right: 0; */
+   /* background-color: white; */
+}
+
+.paymentButton {
+   background-color: #4649a0;
+	color: white;
+	padding: 12px;
+	border-radius: 5px;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-size: 12px;
+	display: flex;
+	align-items: center;
+	width: 80%;
+	justify-content: center;
+   transition: 0.5s ease-in-out all;
+   font-weight: 600;
+}
+
+.paymentButton:hover {
+   background-color: #383a80;
+}
+
+.totalPayment {
+   /* background-color: thistle; */
+   width: 80%;
+   padding: 2px 5px;
+	border-radius: 5px;
+}
+
+.deleteButton {
+   /* margin-top: 10px; */
+   cursor: pointer;
+   text-align: center;
+   width: max-content;
+   margin: 0 auto;
+   padding-top: 10px;
+}
+
+.deleteButton p {
+   font-size: .9em;
+}
+
+.deleteButton p:hover {
+   text-decoration: underline;
 }
