--- a/styles/payment.css
+++ b/styles/payment.css
@@ -11,11 +11,11 @@
 }
 
 .head p {
-   font-size: .9em;
+   font-size: 1em;
 }
 
 .head h4 {
-   font-size: .9em;
+   font-size: 1em;
 }
 
 .head p:hover {
