--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,5 +1,5 @@
 .paymentContainer {
-   margin: 20px 0 60px 0;
+   margin: 20px 0 30px 0;
    /* border: 1px solid red; */
    padding: 0 15px;
 }
@@ -57,6 +57,76 @@ textarea{
    margin-top: 15px;
 }
 
+/* payment */
 .paymentEl {
    margin-top: 20px;
+}
+
+/* itemdesc */
+
+.itemDescEl {
+   margin-top: 20px;
+}
+
+.opsi .itemDesc {
+   display: flex;
+   justify-content: space-between;
+   margin-top: 10px;
+}
+
+
+
+.itemDesc p span {
+   margin-left: 5px;
+}
+
+
+/* button */
+
+.paymentTotalPayment {
+   display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+	/* border: 1px solid red; */
+	align-items: center;
+	justify-items: center;
+	border-radius: 5px;
+	margin: 20px 0 65px 0;
+   gap: 5px;
+   /* position: fixed;
+   bottom: 40px;
+   left: 0;
+   right: 0; */
+   /* background-color: white; */
+   /* visibility: hidden; */
+}
+
+.paymentTotalPayment.active {
+   visibility: visible;
+}
+
+.paymentTotalPayment .paymentButton {
+   background-color: #4649a0;
+	color: white;
+	padding: 12px;
+	border-radius: 5px;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-size: 12px;
+	display: flex;
+	align-items: center;
+	width: 80%;
+	justify-content: center;
+   transition: 0.5s ease-in-out all;
+   font-weight: 600;
+}
+
+.paymentButton:hover {
+   background-color: #383a80;
+}
+
+.paymentTotalPayment .totalPayment {
+   /* background-color: thistle; */
+   width: 80%;
+   padding: 2px 5px;
+	border-radius: 5px;
 }
