--- a/styles/home.css
+++ b/styles/home.css
@@ -60,15 +60,18 @@ header img {
 	height: 45px;
 	border-radius: 20px;
 	border: 1px solid white;
-   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.05);
+   /* box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.05); */
    /* box-shadow: 2px 3px 50px rgba(0, 0, 0, 0.1); */
 	padding: 20px;
-	box-sizing: border-box;
+   box-sizing: border-box;
+   border: 1px solid #2227b4;
+   transition: .3s ease all;
 }
 
 input:focus {
    outline: none;
-   border: 0;
+   border: 1px solid #959beb;
+   box-shadow: 2px 3px 15px rgba(208, 215, 255, 0.507);
 }
 
 .searchBar input::-webkit-input-placeholder {
