--- a/styles/payment.css
+++ b/styles/payment.css
@@ -10,13 +10,7 @@
    justify-content: space-between;
 }
 
-.head p {
-   font-size: 1.01em;
-}
 
-.head h4 {
-   font-size: 1.02em;
-}
 
 .head p:hover {
    text-decoration: underline;
@@ -32,6 +26,10 @@
    display: none;
 }
 
+.addressText.active {
+   display: inherit;
+}
+
 textarea{
    width: 100%;
    height: 70px;
@@ -41,6 +39,10 @@ textarea{
    box-sizing: border-box;
    font-weight: 400;
    font-family: 'Montserrat';
+}
+
+textarea.nonactive {
+   display: none;
 }
 
 
