--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import './styles/detail.css';
 @import './styles/cart.css';
 @import './styles/payment.css';
+@import './styles/profile.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 * {
@@ -14,15 +15,15 @@
 
 body {
 	font-family: 'Montserrat', sans-serif;
-   font-size: 15px;
-   color: #4649a0;
+	font-size: 15px;
+	color: #4649a0;
 }
 
 .container {
 	/* border: 1px solid black; */
 	width: 90%;
-   margin: 20px auto;
-   /* position: relative; */
+	margin: 20px auto;
+	/* position: relative; */
 }
 
 /* navbar */
@@ -43,8 +44,8 @@ nav {
 	align-items: center;
 	/* border-top-left-radius: 5px;
    border-top-right-radius: 5px; */
-   border-radius: 30px;
-   z-index: 2;
+	border-radius: 30px;
+	z-index: 2;
 }
 
 nav svg {
