--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 @import './styles/detail.css';
 @import './styles/cart.css';
 @import './styles/payment.css';
+@import './styles/pesanan.css';
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 * {
@@ -19,10 +21,8 @@ body {
 }
 
 .container {
-	/* border: 1px solid black; */
 	width: 90%;
    margin: 20px auto;
-   /* position: relative; */
 }
 
 /* navbar */
@@ -31,7 +31,6 @@ nav {
 	background-color: #4649a0;
 	display: grid;
 	position: fixed;
-	/* top: 0; */
 	bottom: 5px;
 	right: 15px;
 	left: 15px;
@@ -41,16 +40,12 @@ nav {
 	justify-content: space-between;
 	justify-items: center;
 	align-items: center;
-	/* border-top-left-radius: 5px;
-   border-top-right-radius: 5px; */
    border-radius: 30px;
    z-index: 2;
 }
 
 nav svg {
 	color: #9394d6;
-	/* background-color: red; */
-	/* fill: none; */
 	transition: 0.3s ease all;
 }
 
