--- a/styles/infoPesanan.css
+++ b/styles/infoPesanan.css
@@ -25,8 +25,8 @@
 
 .infoPesananButtonContainer .but {
    border: 1px solid #4649a0;
-   margin-top: 15px;
-   padding: 10px;
+   margin-top: 10px;
+   padding: 12px;
    text-align: center;
    border-radius: 5px;
    text-transform: uppercase;
@@ -35,7 +35,10 @@
    transition: 0.5s ease-in-out all;
    cursor: pointer;
 }
-
+.infoPesananButtonContainer .but.orderID p{
+   font-size: 15px;
+   font-weight: 700;
+}
 .infoPesananButtonContainer .lacak {
    background-color: #4649a0;
    color: white;
@@ -46,7 +49,7 @@
 }
 
 .totalPaymentEl {
-   margin-top: 20px;
+   margin-top: 15px;
    display: flex;
    justify-content: space-between;
 }
