--- a/styles/lacak.css
+++ b/styles/lacak.css
@@ -1,7 +1,9 @@
+
 .pelacakan .pelacakan-detail {
     width: 100%;
     height: 80vh;
     position: relative;
+    margin: 30px 0 60px 0;
 }
 
 .pelacakan .pelacakan-detail iframe {
@@ -17,7 +19,7 @@
     position: absolute;
     bottom: -50px;
     border-radius: 30px 30px 0px 0px;
-    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .pelacakan .pelacakan-detail .card .line {
@@ -34,7 +36,9 @@
 .pelacakan .pelacakan-detail .card .driver {
     display: flex;
     align-items: center;
-    margin: 40px 20px;
+    margin: 40px 20px 20px 20px;
+    /* border: 1px solid red; */
+    justify-content: space-between;
 }
 
 .pelacakan .pelacakan-detail .card .driver .image img {
@@ -45,28 +49,40 @@
 
 .pelacakan .pelacakan-detail .card .driver .driver-profile {
     margin: 0px 20px;
+    /* border: 1px solid red; */
+    width: 100%;
+    /* font-size: .9em; */
 }
 
 .pelacakan .pelacakan-detail .card .driver .driver-profile h4 {
+   /* border: 1px solid red; */
     margin: 5px 0px;
+    
 }
 
 .pelacakan .pelacakan-detail .card .driver .icon {
     display: flex;
     justify-content: space-between;
-    width: 30%;
+    /* border: 1px solid red; */
+    /* min-width: 30%; */
+    /* width: 30%; */
 }
 
 .pelacakan .pelacakan-detail .card .driver .icon .icon-item {
     display: flex;
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
+    width: 35px;
+    height: 35px;
+    border-radius: 35px;
     background-color: #4649A0;
     color: white;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
+    font-size: 13px;
+    /* margin-right: 10px; */
+}
+
+.pelacakan .pelacakan-detail .card .driver .icon .icon-item:nth-child(1){
+   margin-right: 10px;
 }
 
 .pelacakan .pelacakan-detail .card .track {
@@ -75,7 +91,7 @@
 }
 
 .pelacakan .pelacakan-detail .card .track .lines {
-    height: auto;
+    /* height: auto; */
     width: 3px;
     background: #4649A0;
     margin: 5px 10px;
