--- a/pages/Auth/style/index.css
+++ b/pages/Auth/style/index.css
@@ -15,8 +15,12 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 
 .container {
     /* border: 1px solid black; */
@@ -75,6 +79,25 @@ a {
     background-position: center;
 }
 
+.mobile-view {
+    width: 400px;
+    height: 100%;
+    overflow: auto;
+    position: relative;
+    margin: auto;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .mobile-view {
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        position: relative;
+        margin: auto;
+    }
+}
+
 .auth-index {
     display: flex;
     justify-content: center;
@@ -131,8 +154,8 @@ a {
 }
 
 .text-secondary h4 {
-   font-weight: 500;
-   letter-spacing: .5px;
+    font-weight: 500;
+    letter-spacing: .5px;
 }
 
 .text-primary {
@@ -176,8 +199,8 @@ a {
 
 .second {
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 .second h2 {
@@ -230,14 +253,14 @@ a {
 }
 
 .second .form-group:focus {
-   /* border: 1px solid yellow; */
+    /* border: 1px solid yellow; */
 }
 
 .second .form-group .icon {
     width: 20px;
     height: 20px;
     margin: auto 10px;
-    
+
 }
 
 .second .form-group input {
