--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
 
 nav {
 	background-color: #4649a0;
+	display: -ms-grid;
 	display: grid;
 	position: fixed;
 	bottom: 5px;
@@ -65,10 +66,15 @@ nav {
 	left: 15px; */
 	/* padding: 0 5px; */
 	height: 51px;
-	grid-template-columns: repeat(4, minmax(50px, 60px));
-	justify-content: space-between;
-	justify-items: center;
-	align-items: center;
+	-ms-grid-columns: (minmax(50px, 60px));
+	    grid-template-columns: repeat(4, minmax(50px, 60px));
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-ms-grid-column-align: center;
+	    justify-items: center;
+	-ms-grid-row-align: center;
+	    align-items: center;
 	border-radius: 30px;
 	z-index: 2;
 	width: 400px;
@@ -77,6 +83,7 @@ nav {
 
 nav svg {
 	color: #9394d6;
+	-webkit-transition: 0.3s ease all;
 	transition: 0.3s ease all;
 }
 
@@ -88,7 +95,6 @@ a {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-tap-highlight-color: transparent;
 	-webkit-user-select: none;
-	-khtml-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
