--- a/styles/cart.css
+++ b/styles/cart.css
@@ -3,35 +3,44 @@
 }
 
 .cartContainer {
+   display: -ms-grid;
    display: grid;
-   justify-items: center;
+   -ms-grid-column-align: center;
+       justify-items: center;
 }
 
 .cartItem {
+   display: -ms-grid;
    display: grid;
    /* grid-template-columns: 20% 60% 20%; */
-   grid-template-columns: 70px auto 90px;
-   grid-template-rows: 70px;
+   -ms-grid-columns: 70px auto 90px;
+       grid-template-columns: 70px auto 90px;
+   -ms-grid-rows: 70px;
+       grid-template-rows: 70px;
    /* border: 1px solid red; */
    margin: 20px 0 0 0;
    padding: 10px 10px;
    /* background-color: #E3E4F7; */
    border-radius: 10px;
    /* justify-items: spac; */
-   align-items: center;
+   -ms-grid-row-align: center;
+       align-items: center;
    width: 260px;
    /* width: 100%; */
-   align-content: center;
+   -ms-flex-line-pack: center;
+       align-content: center;
    /* justify-content: space-between; */
    /* gap: 10px; */
    
    position: relative;
    border: 1px solid #4649a0;
+   -webkit-transition: .3s ease all;
    transition: .3s ease all;
 }
 
 .cartItem.active {
-   transform: scale(1.05);
+   -webkit-transform: scale(1.05);
+           transform: scale(1.05);
 }
 
 .cartItemImg img {
@@ -40,9 +49,12 @@
 }
 
 .cartItemImg {
+   display: -ms-grid;
    display: grid;
-   justify-items: center;
-   align-items: center;
+   -ms-grid-column-align: center;
+       justify-items: center;
+   -ms-grid-row-align: center;
+       align-items: center;
    background-color: #F8F8F8;
    border-radius: 10px;
    box-sizing: border-box;
@@ -53,6 +65,8 @@
 
 .cartItemNamePrice {
    padding-left: 15px;
+   width: -webkit-max-content;
+   width: -moz-max-content;
    width: max-content;
 }
 
@@ -68,10 +82,19 @@
    /* border: 1px solid red; */
    /* width: 100%; */
    /* width: 66px; */
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   flex-direction: column;
-   justify-content: space-between;
-   align-items: flex-end;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: column;
+           flex-direction: column;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
+   -webkit-box-align: end;
+       -ms-flex-align: end;
+           align-items: flex-end;
    height: 66px;
    /* padding: 5px; */
    justify-self: end;
@@ -80,15 +103,22 @@
 }
 
 .cartCheck .quantity {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	/* border: 1px solid red; */
 	/* width: 100%; */
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 input[type=checkbox] {
-   transform: scale(1.3);
+   -webkit-transform: scale(1.3);
+           transform: scale(1.3);
 }
 
 .cartCheck .quantity input {
@@ -105,10 +135,17 @@ input[type=checkbox] {
 	width: 20px;
 	height: 20px;
 	border-radius: 50%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	/* box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.1); */
+	-webkit-transition: 0.3s ease-in-out all;
 	transition: 0.3s ease-in-out all;
 	cursor: pointer;
 }
@@ -124,11 +161,15 @@ input[type=checkbox] {
 
 
 .cartTotalPayment {
+   display: -ms-grid;
    display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+	-ms-grid-columns: (minmax(120px, 1fr))[auto-fit];
+	    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 	/* border: 1px solid red; */
-	align-items: center;
-	justify-items: center;
+	-ms-grid-row-align: center;
+	    align-items: center;
+	-ms-grid-column-align: center;
+	    justify-items: center;
 	border-radius: 5px;
 	margin: 20px 0 65px 0;
    gap: 5px;
@@ -152,10 +193,17 @@ input[type=checkbox] {
 	cursor: pointer;
 	text-transform: uppercase;
 	font-size: 12px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	width: 80%;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+   -webkit-transition: 0.5s ease-in-out all;
    transition: 0.5s ease-in-out all;
    font-weight: 600;
 }
@@ -175,6 +223,8 @@ input[type=checkbox] {
    /* margin-top: 10px; */
    cursor: pointer;
    text-align: center;
+   width: -webkit-max-content;
+   width: -moz-max-content;
    width: max-content;
    margin: 0 auto;
    padding-top: 10px;
