--- a/styles/home.css
+++ b/styles/home.css
@@ -1,10 +1,16 @@
 
 .header {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	/* border: 1px solid red; */
 	width: 170px;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 header img {
@@ -65,6 +71,7 @@ header img {
 	padding: 20px;
    box-sizing: border-box;
    /* border: 1px solid #2227b4; */
+   -webkit-transition: .3s ease all;
    transition: .3s ease all;
    background-color: rgb(247, 247, 247);
 }
@@ -107,14 +114,21 @@ input:focus {
    width: 36px;
    height: 36px;
    border-radius: 50%;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
-   justify-content: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
    position: absolute;
    top: 4px;
    right: 11px;
    bottom: 5px;
    cursor: pointer;
+   -webkit-transition: .5s ease all;
    transition: .5s ease all;
 }
 
@@ -130,11 +144,17 @@ input:focus {
 /* Banner */
 
 .banner {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    background-color: #E3E4F7;
    border-radius: 15px;
-   justify-content: center;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
    padding: 20px;
    height: 123px;
    /* box-sizing: border-box; */
@@ -170,11 +190,15 @@ input:focus {
    /* display: flex; */
    /* justify-content: space-between; */
    margin: 20px 0 60px 0;
+   display: -ms-grid;
    display: grid;
-   grid-template-columns: repeat(3, minmax(70px, 1fr));
-   grid-template-rows: repeat(1, minmax(170px, 2fr));
+   -ms-grid-columns: (minmax(70px, 1fr));
+       grid-template-columns: repeat(3, minmax(70px, 1fr));
+   -ms-grid-rows: (minmax(170px, 2fr));
+       grid-template-rows: repeat(1, minmax(170px, 2fr));
    /* border: 1px solid red; */
-   justify-items: center;
+   -ms-grid-column-align: center;
+       justify-items: center;
    gap: 15px;
 }
 
