--- a/styles/infoPesanan.css
+++ b/styles/infoPesanan.css
@@ -32,6 +32,7 @@
    text-transform: uppercase;
    font-weight: 600;
    font-size: 13px;
+   -webkit-transition: 0.5s ease-in-out all;
    transition: 0.5s ease-in-out all;
    cursor: pointer;
 }
@@ -50,6 +51,10 @@
 
 .totalPaymentEl {
    margin-top: 15px;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: space-between;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
 }
