--- a/styles/lacak.css
+++ b/styles/lacak.css
@@ -1,134 +1,152 @@
 
 .pelacakan .pelacakan-detail {
-    width: 100%;
-    height: 80vh;
-    position: relative;
-    margin: 30px 0 60px 0;
+   width: 100%;
+   height: 80vh;
+   position: relative;
+   margin: 30px 0 60px 0;
 }
 
 .pelacakan .pelacakan-detail iframe {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+   width: 100%;
+   height: 100%;
+   border-radius: 10px;
 }
 
 .pelacakan .pelacakan-detail .card {
-    width: 101%;
-    height: 45%;
-    background: white;
-    position: absolute;
-    bottom: -50px;
-    border-radius: 30px 30px 0px 0px;
-    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+   width: 101%;
+   height: 45%;
+   background: white;
+   position: absolute;
+   bottom: -50px;
+   border-radius: 30px 30px 0px 0px;
+   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .pelacakan .pelacakan-detail .card .line {
-    width: 20%;
-    height: 5px;
-    background-color: rgba(0, 0, 0, 0.1);
-    margin: auto;
-    border-radius: 30px 30px 30px 30px;
-    position: absolute;
-    top: 20px;
-    right: 40%;
+   width: 20%;
+   height: 5px;
+   background-color: rgba(0, 0, 0, 0.1);
+   margin: auto;
+   border-radius: 30px 30px 30px 30px;
+   position: absolute;
+   top: 20px;
+   right: 40%;
 }
 
 .pelacakan .pelacakan-detail .card .driver {
-    display: flex;
-    align-items: center;
-    margin: 40px 20px 20px 20px;
-    /* border: 1px solid red; */
-    justify-content: space-between;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   margin: 40px 20px 20px 20px;
+   /* border: 1px solid red; */
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
 }
 
 .pelacakan .pelacakan-detail .card .driver .image img {
-    width: 50px;
-    height: 50px;
-    border-radius: 10px 10px 10px 10px;
+   width: 50px;
+   height: 50px;
+   border-radius: 10px 10px 10px 10px;
 }
 
 .pelacakan .pelacakan-detail .card .driver .driver-profile {
-    margin: 0px 20px;
-    /* border: 1px solid red; */
-    width: 100%;
-    /* font-size: .9em; */
+   margin: 0px 20px;
+   /* border: 1px solid red; */
+   width: 100%;
+   /* font-size: .9em; */
 }
 
 .pelacakan .pelacakan-detail .card .driver .driver-profile h4 {
-   /* border: 1px solid red; */
-    margin: 5px 0px;
-    
+  /* border: 1px solid red; */
+   margin: 5px 0px;
+   
 }
 
 .pelacakan .pelacakan-detail .card .driver .icon {
-    display: flex;
-    justify-content: space-between;
-    /* border: 1px solid red; */
-    /* min-width: 30%; */
-    /* width: 30%; */
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
+   /* border: 1px solid red; */
+   /* min-width: 30%; */
+   /* width: 30%; */
 }
 
 .pelacakan .pelacakan-detail .card .driver .icon .icon-item {
-    display: flex;
-    width: 35px;
-    height: 35px;
-    border-radius: 35px;
-    background-color: #4649A0;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    font-size: 13px;
-    /* margin-right: 10px; */
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   width: 35px;
+   height: 35px;
+   border-radius: 35px;
+   background-color: #4649A0;
+   color: white;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   font-size: 13px;
+   /* margin-right: 10px; */
 }
 
 .pelacakan .pelacakan-detail .card .driver .icon .icon-item:nth-child(1){
-   margin-right: 10px;
+  margin-right: 10px;
 }
 
 .pelacakan .pelacakan-detail .card .track {
-    display: flex;
-    margin: 0px 20px;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   margin: 0px 20px;
 }
 
 .pelacakan .pelacakan-detail .card .track .lines {
-    /* height: auto; */
-    width: 3px;
-    background: #4649A0;
-    margin: 5px 10px;
-    position: relative;
+   /* height: auto; */
+   width: 3px;
+   background: #4649A0;
+   margin: 5px 10px;
+   position: relative;
 }
 
-.pelacakan .pelacakan-detail .card .track .lines::before {
-    height: 10px;
-    width: 10px;
-    background: #4649A0;
-    margin: 10px;
-    content: 'a';
-    overflow: hidden;
-    position: absolute;
-    border-radius: 99px;
-    top: -10px;
-    right: -13.5px;
+.pelacakan .pelacakan-detail .card .track .lines:before {
+   height: 10px;
+   width: 10px;
+   background: #4649A0;
+   margin: 10px;
+   content: 'a';
+   overflow: hidden;
+   position: absolute;
+   border-radius: 99px;
+   top: -10px;
+   right: -13.5px;
 }
 
-.pelacakan .pelacakan-detail .card .track .lines::after {
-    height: 10px;
-    width: 10px;
-    background: #4649A0;
-    margin: 10px;
-    content: 'a';
-    overflow: hidden;
-    position: absolute;
-    border-radius: 99px;
-    bottom: -10px;
-    right: -13.5px;
+.pelacakan .pelacakan-detail .card .track .lines:after {
+   height: 10px;
+   width: 10px;
+   background: #4649A0;
+   margin: 10px;
+   content: 'a';
+   overflow: hidden;
+   position: absolute;
+   border-radius: 99px;
+   bottom: -10px;
+   right: -13.5px;
 }
 
 .pelacakan .pelacakan-detail .card .track .track-detail {
-    margin-left: 10px;
+   margin-left: 10px;
 }
 
 .pelacakan .pelacakan-detail .card .track .track-detail .track-item {
-    margin-left: 10px;
-    margin: 10px 0px;
+   margin-left: 10px;
+   margin: 10px 0px;
 }
