--- a/styles/payment.css
+++ b/styles/payment.css
@@ -4,8 +4,12 @@
 }
 
 .head {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: space-between;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
 }
 
 
@@ -51,9 +55,15 @@ textarea.nonactive {
 }
 
 .opsi ul li {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: space-between;
-   align-items: center;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
    margin-top: 15px;
 }
 
@@ -69,8 +79,12 @@ textarea.nonactive {
 }
 
 .opsi .itemDesc {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   justify-content: space-between;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
    margin-top: 10px;
 }
 
@@ -84,11 +98,15 @@ textarea.nonactive {
 /* button */
 
 .paymentTotalPayment {
+   display: -ms-grid;
    display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+	-ms-grid-columns: (minmax(120px, 1fr))[auto-fit];
+	    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 	/* border: 1px solid red; */
-	align-items: center;
-	justify-items: center;
+	-ms-grid-row-align: center;
+	    align-items: center;
+	-ms-grid-column-align: center;
+	    justify-items: center;
 	border-radius: 5px;
 	margin: 20px 0 65px 0;
    gap: 5px;
@@ -112,10 +130,17 @@ textarea.nonactive {
 	cursor: pointer;
 	text-transform: uppercase;
 	font-size: 12px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	width: 80%;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+   -webkit-transition: 0.5s ease-in-out all;
    transition: 0.5s ease-in-out all;
    font-weight: 600;
 }
