--- a/styles/profile.css
+++ b/styles/profile.css
@@ -4,9 +4,15 @@
 }
 
 .profile .profile-detail {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     /* border: 1px solid red; */
     margin: 20px 0;
     padding: 0 10px;
@@ -42,15 +48,24 @@
 }
 
 .profile .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     /* border: 1px solid red; */
     margin-bottom: 65px;
 }
 
 .profile .menu .menu-one {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     /* border: 1px solid red; */
 }
 
@@ -60,11 +75,13 @@
     border: 1px solid #4649a0;
     padding: 10px;
     text-align: center;
+    -webkit-transition: .4s ease-in-out all;
     transition: .4s ease-in-out all;
 }
 
 .profile .menu .menu-one .menu-item:hover {
-    transform: scale(.95);
+    -webkit-transform: scale(.95);
+            transform: scale(.95);
     border: 1.5px solid #4649a0;
     /* transition: 1s; */
     /* background-color: #6C63FF; */
